# DonerComponents_Asteroids_Example

./: .gitignore  .gitmodules  .travis.yml  README.md  generate.bat  generate_MSYS_clang.sh  generate_MSYS_gcc.sh  generate_unix.sh  generate_win.bat
asteroids/: CMakeLists.txt
asteroids/include/application/: CApplication.h
asteroids/include/components/: CCompAsteroidSpawner.h  CCompAsteroidSplitter.h  CCompBoundariesChecker.h  CCompBulletCollider.h  CCompMoveStraightLine.h  CCompPlayerBoundariesChecker.h  CCompShipMovement.h  CCompShoot.h  CCompSpin.h
asteroids/include/messages/: AsteroidsMessages.h
asteroids/source/: main.cpp
asteroids/source/common/application/: CApplication.cpp
asteroids/source/common/components/: CCompAsteroidSpawner.cpp  CCompAsteroidSplitter.cpp  CCompBoundariesChecker.cpp  CCompBulletCollider.cpp  CCompMoveStraightLine.cpp  CCompPlayerBoundariesChecker.cpp  CCompShipMovement.cpp  CCompShoot.cpp  CCompSpin.cpp
engine/: CMakeLists.txt
engine/include/engine/: Defines.h
engine/include/engine/application/: CApplicationBase.h  SApplicationWindowParameters.h
engine/include/engine/components/: CCompCollider.h  CCompSprite.h  CCompTransform.h
engine/include/engine/graphics/: CRenderer.h  CSpriteFactory.h
engine/include/engine/input/: CKeyboard.h  CMouse.h  EKeyboardKey.h  EMouseButton.h
engine/include/engine/messages/: CommonMessages.h
engine/include/engine/physics/: CCollisionManager.h
engine/include/engine/reflection/: EngineReflection.h
engine/include/engine/serialization/: EngineSerialization.h
engine/include/engine/utils/: CRandomGenerator.h  VectorUtils.h
engine/source/common/application/: CApplicationBase.cpp
engine/source/common/components/: CCompCollider.cpp  CCompSprite.cpp  CCompTransform.cpp
engine/source/common/graphics/: CRenderer.cpp  CSpriteFactory.cpp
engine/source/common/input/: CKeyboard.cpp  CMouse.cpp
engine/source/common/physics/: CCollisionManager.cpp
engine/source/common/reflection/: EngineReflection.cpp
engine/source/common/utils/: CRandomGenerator.cpp
res/common/: tags.json
res/common/prefabs/: asteroid_big.json  asteroid_med.json  asteroid_small.json  bullet.json  player.json
res/common/scenes/: main.json  test.json  test_player.json
scripts/: travis.sh
